Dropzone: fix align

--- a/components/dropzone/Dropzone.module.scss
+++ b/components/dropzone/Dropzone.module.scss
@@ -124,6 +124,7 @@
   border: var(--dropzone-border-v);
   border-radius: var(--dropzone-radius-v);
   display: flex;
+  align-items: center;
   box-sizing: border-box;
 
   &.hasChildren {
